<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/title_bar" android:id="@+id/titleBar_home" />

    <Button
        android:id="@+id/bt_openBlueTooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openBlueTooth"
        android:text="@string/openBlueTooth"
        android:textSize="20sp"
        android:backgroundTint="#3DD239"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/bt_closeBlueTooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="closeBlueTooth"
        android:text="@string/closeBlueTooth"
        android:textSize="20sp"
        android:backgroundTint="#3DD239"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/bt_listDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listBlueToothDevices"
        android:text="@string/listBlueToothDevices"
        android:textSize="20sp"
        android:backgroundTint="#3DD239"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/bt_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="disconnectBlueToothDevices"
        android:text="@string/disconnect"
        android:textSize="20sp"
        android:backgroundTint="#636363"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/bt_connTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testBleConnectionState"
        android:text="@string/connectionTest"
        android:textSize="20sp"
        android:backgroundTint="#636363"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/bt_dataView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeDataView"
        android:text="@string/dataView"
        android:textSize="20sp"
        android:backgroundTint="#636363"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/connectStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectStatus"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/bondedBlueToothDeviceListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonded_devices_list"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <ListView
        android:id="@+id/bondedBlueToothDeviceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bondedBlueToothDeviceListText" />

    <TextView
        android:id="@+id/unbondedBlueToothDeviceListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbonded_devices_list"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bondedBlueToothDeviceList" />

    <ListView
        android:id="@+id/unbondedBlueToothDeviceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="200sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unbondedBlueToothDeviceListText" />

</androidx.constraintlayout.widget.ConstraintLayout>